syntax = "proto3";

import "google/protobuf/timestamp.proto";

package budget_proto;

service PurchasesService {
  rpc GetPurchases (GetPurchasesRequest) returns (GetPurchasesResponse);
}

message GetPurchasesRequest {
  optional int32 id = 1;
  optional string description = 2;
  optional string category = 3;
  optional google.protobuf.Timestamp start_time = 4;
  optional google.protobuf.Timestamp end_time = 5;
}

message GetPurchasesResponse {
  repeated Purchase purchases = 1;
}

message InsertPurchaseRequest {
  google.protobuf.Timestamp date = 1;
  string description = 2;
  string amount = 3;
  string category = 4;
}

message InsertPurchaseResponse { }

message Purchase {
  int32 id = 1;
  google.protobuf.Timestamp date = 2;
  string description = 3;
  double amount = 4;
  string category = 5;
}